--- a/packaging/deb-v2/debian/rules
+++ b/packaging/deb-v2/debian/rules
@@ -7,9 +7,10 @@ package=mackerel-agent-plugins
 
 override_dh_auto_install:
 	dh_auto_install
-	install -d -m 755 debian/tmp/usr/bin
+	install -d -m 755 debian/${package}/usr/bin
+	install -m 755 debian/mackerel-plugin debian/${package}/usr/bin/mackerel-plugin
 	for i in apache2 aws-ec2-cpucredit aws-elasticache aws-elasticsearch aws-elb aws-rds aws-ses conntrack elasticsearch gostats graphite haproxy jmx-jolokia jvm linux mailq memcached mongodb multicore munin mysql nginx php-apc php-fpm php-opcache plack postgres proc-fd rabbitmq redis snmp squid td-table-count trafficserver twemproxy varnish xentop aws-cloudfront aws-ec2-ebs fluentd docker unicorn uptime inode; do \
-	    ln -s ../../bin/mackerel-plugin debian/tmp/usr/bin/mackerel-plugin-$$i; \
+	    ln -s ./mackerel-plugin debian/${package}/usr/bin/mackerel-plugin-$$i; \
 	done
 
 override_dh_usrlocal:
