--- a/packaging/deb-v2/debian/control
+++ b/packaging/deb-v2/debian/control
@@ -2,8 +2,11 @@ Source: mackerel-agent-plugins
 Maintainer: Mackerel Developers <mackerel-developers@hatena.ne.jp>
 Section: misc
 Priority: optional
+Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.2
+Depends: ${misc:Depends}
 
 Package: mackerel-agent-plugins
 Architecture: amd64
-Description: plugins for Mackerel
+Description: metric plugins for mackerel-agent
+ metric plugins for https://mackerel.io (Monitoring SaaS)
