--- a/packaging/deb-v2/debian/control
+++ b/packaging/deb-v2/debian/control
@@ -4,9 +4,9 @@ Section: misc
 Priority: optional
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.2
-Depends: ${misc:Depends}
 
 Package: mackerel-agent-plugins
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Architecture: amd64
 Description: metric plugins for mackerel-agent
  metric plugins for https://mackerel.io (Monitoring SaaS)
